--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,13 +1,3 @@
-set(HEADER_LIST "${LSEG_RO_atataru_SOURCE_DIR}/include/player.hpp")
-set(HEADER_LIST "${LSEG_RO_atataru_SOURCE_DIR}/include/order.hpp")
-set(HEADER_LIST "${LSEG_RO_atataru_SOURCE_DIR}/include/chaos.hpp")
-set(HEADER_LIST "${LSEG_RO_atataru_SOURCE_DIR}/include/utils.hpp")
-
-# Make an automatic library - will be static or dynamic based on user setting
-add_library(codecup_library lib.cpp ${HEADER_LIST})
-
-# We need this directory, and users of our library will need it too
-target_include_directories(codecup_library PUBLIC ../include)
-
-# All users of this library will need at least C++11
-target_compile_features(codecup_library PUBLIC cxx_std_11)
+add_executable(bot bot.cpp)
+target_compile_features(bot PRIVATE cxx_std_17)
+target_include_directories(bot PUBLIC ../include)
